--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nike Fashion</title>
+    <title>Nepolica</title>
     <link rel="shortcut icon" href="icons/icon-1.png" type="image/x-icon">
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
